samples/_failures_safe/1761161502_01898d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e063d733.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_e063d733.c:184:15: error: expected ‘)’ at end of input
  184 |     if (!queue
      |        ~      ^
      |               )
./samples/SAFE/__tmp_e063d733.c:184:5: error: expected declaration or statement at end of input
  184 |     if (!queue
      |     ^~
